--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charSet="utf-8"/>
         <meta name="viewport" content="width=device-width"/>
         <meta name="next-head-count" content="2"/>
+        <title>安野たかひろ都知事選出馬に関しての人々の反応と論点</title>
+        <meta name="description" content="安野たかひろ都知事選出馬に関するニュースへのコメントを抽出し、人々の反応と論点はどのようなものか分析したデータを公開"/>
         <meta property="og:url" content="https://takahiroanno2024.github.io/yahoo-comment-analysis-20240610/" />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="https://takahiroanno2024.github.io/yahoo-comment-analysis-20240610/images/ogp.png" />
