--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width"/>
         <meta name="next-head-count" content="2"/>
         <meta property="og:type" content="website" />
+        <title>安野たかひろ都知事選出馬に関しての人々の反応と論点</title>
         <meta property="og:site_name" content="安野たかひろ都知事選出馬に関しての人々の反応と論点" />
         <meta property="og:title" content="安野たかひろ都知事選出馬に関しての人々の反応と論点" />
         <meta name="twitter:title" content="安野たかひろ都知事選出馬に関しての人々の反応と論点" />
